<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kartu_keluarga"
            android:textSize="24sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_keluarga"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomor_registrasi"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/ed_nomor_registrasi"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/masukkan_nomor_registrasi"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alamat"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/ed_alamat"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/cth_jl_bogor_raya"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dusun"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>
        <Spinner
            android:id="@+id/spinner_dusun"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:hint="@string/pilih_dusun"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rw"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>
        <Spinner
            android:id="@+id/spinner_rw"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:hint="@string/pilih_rw"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rt"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>
        <Spinner
            android:id="@+id/spinner_rt"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:hint="@string/pilih_rt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kode_pos"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>
        <EditText
            android:id="@+id/ed_kode_pos"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_edit"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:hint="@string/kode_pos"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:gravity="center">

            <Button
                android:id="@+id/btn_tambah_anggota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit"
                android:visibility="gone"
                android:text="@string/tambah_anggota"/>

            <Button
                android:id="@+id/btn_buat_surat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit"
                android:visibility="gone"
                android:text="@string/buat_surat"
                android:layout_marginStart="8dp"/>
        </LinearLayout>


            <LinearLayout

                android:id="@+id/data_warga_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="34dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.791"
            app:layout_constraintStart_toEndOf="@+id/title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </LinearLayout>
</ScrollView>
