<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout

    android:id="@+id/data_warga_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_edit"
    android:padding="4dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_warga"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NIK"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/ed_nikKK"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/NIK"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nama"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/ed_nama"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/Nama"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alamatSebelumnya"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/ed_alamatKK"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/alamatSebelumnya"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempat"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/ed_tempat_lahir"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/tempat"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TanggalLahir"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/ed_tanggal_lahir"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/tanggal"
        android:drawableEnd="@drawable/ic_calendar"
        android:focusable="false"
        android:clickable="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/JenisKelamin"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <Spinner
        android:id="@+id/spinner_jenis_kelaminKK"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Agama"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <Spinner
        android:id="@+id/spinner_agama"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/Agama"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/golongan_darah"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <Spinner
        android:id="@+id/spinner_golongan_darah"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StatusHubunganDalamkeluarga"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <Spinner
        android:id="@+id/spinner_status_keluarga"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Pekerjaan"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/ed_pekerjaan"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/Pekerjaan"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pendidikanTerakhir"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <Spinner
        android:id="@+id/spinner_pendidikan"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_surat"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_paspor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/ed_no_paspor"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/no_paspor"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tgl_berakhir_paspor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/ed_tgl_berakhir_paspor"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/tgl_berakhir_paspor"
        android:drawableEnd="@drawable/ic_calendar"
        android:focusable="false"
        android:clickable="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/akta_kelahiran"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/ed_akta_lahir"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/akta_lahir_surat_lahir"/>

    <Spinner
        android:id="@+id/spinner_akta_kelahiran"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        />

    <!-- Data Status Perkawinan Section -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_status_perkawinan"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <RadioGroup
        android:id="@+id/rg_status_perkawinan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_belum_kawin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/belum_kawin"/>

        <RadioButton
            android:id="@+id/rb_kawin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"

            android:text="@string/kawin"/>

        <RadioButton
            android:id="@+id/rb_cerai_hidup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"

            android:text="@string/cerai_hidup"/>

        <RadioButton
            android:id="@+id/rb_cerai_mati"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"

            android:text="@string/cerai_mati"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_kesehatan"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/penyandang_cacat"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <Spinner
        android:id="@+id/spinner_cacat"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kelainan_fisik_mental"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <Spinner
        android:id="@+id/spinner_kelahiran_fisik_mental"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_ayah_ibu"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nik_ayah"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/ed_nik_ayah"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/nik_ayah"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_ayah"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/ed_nama_ayah"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/nama_ayah"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nik_ibu"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/ed_nik_ibu"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/nik_ibu"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_ibu"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>
    <EditText
        android:id="@+id/ed_nama_ibu"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_edit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:hint="@string/nama_ibu"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:gravity="center">

        <Button
            android:id="@+id/btn_tambah_anggota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit"
            android:text="@string/tambah_anggota"/>
        <Button
            android:id="@+id/btn_hapus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit"
            android:layout_marginStart="8dp"
            android:text="@string/hapus"/>

        <Button
            android:id="@+id/btn_buat_surat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit"
            android:text="@string/buat_surat"
            android:layout_marginStart="8dp"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="34dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</LinearLayout>
</ScrollView>